--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
     <div class="hero-kicker-wrap">
       <img src="assets/fish-gold.png" class="hero-fish-overlay" alt="">
       <div class="hero-kicker">
-        <span class="hero-kicker-text">СЕРІЯ КАРПОВИХ ТУРНІРІВ</span>
+        <span class="hero-kicker-text">Твій рівень. Твій трофей. Твоя перемога.В</span>
       </div>
     </div>
 
@@ -428,9 +428,6 @@
       </a>
     </div>
 
-    <div class="hero-meta">  
-      Твій рівень. Твій трофей. Твоя перемога.
-    </div>
 
     <div class="hero-season-card">
       <h2 class="title-gradient">🏆 Сезон STOLAR CARP 2026</h2>
