--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
     <div class="hero-kicker-wrap">
       <img src="assets/fish-gold.png" class="hero-fish-overlay" alt="">
       <div class="hero-kicker">
-        <span class="hero-kicker-text">Твій рівень. Твій трофей. Твоя перемога.В</span>
+        <span class="hero-kicker-text">Твій рівень. Твій трофей. Твоя перемога.</span>
       </div>
     </div>
 
