--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
       Місія <span class="section-title__brand">STOLAR CARP</span>
     </h2>
     <p class="info-text">
-      Ми прагнемо створити новий стандарт коропових турнірів в Україні: організований, 
+      Ми створили новий стандарт коропових турнірів в Україні: організований, 
       прозорий та створений для розвитку та популяризацію карпфішингу як сучасний вид спорту. Кожне змагання — це не лише боротьба 
       за кубок, а й зустріч однодумців на березі водойми.
     </p>
