--- a/index.html
+++ b/index.html
@@ -396,17 +396,16 @@
       <span class="logo__text">STOLAR CARP</span>
     </a>
     <nav class="nav" id="nav">
-      <a href="index.html" class="nav__link nav__link--active">Головна</a>
-      <a href="rules.html" class="nav__link">Регламент</a>
-      <a href="register.html" class="nav__link">Реєстрація</a>
-      <a href="live.html" class="nav__link">Live</a>
-      <a href="rating.html" class="nav__link">Рейтинг</a>
-      <!-- НОВИЙ ПУНКТ МЕНЮ "МІЙ КАБІНЕТ" -->
-      <a href="https://dk-prime.netlify.app" class="nav__link" target="_blank">Мій кабінет</a>
-      <a href="lakes.html" class="nav__link">Водойми</a>
-      <a href="sponsors.html" class="nav__link">Спонсори</a>
-      <a href="events/index.html" class="nav__link">Архів</a>
-    </nav>
+  <a href="/index.html" class="nav__link">Головна</a>
+  <a href="/rules.html" class="nav__link">Регламент</a>
+  <a href="/register.html" class="nav__link">Реєстрація</a>
+  <a href="/live.html" class="nav__link">Live</a>
+  <a href="/rating.html" class="nav__link">Рейтинг</a>
+  <a href="/lakes.html" class="nav__link">Водойми</a>
+  <a href="/sponsors.html" class="nav__link">Спонсори</a>
+  <a href="/events/index.html" class="nav__link">Архів</a>
+  <a href="/cabinet.html" class="nav__link">Мій кабінет</a>
+</nav>
 
     <!-- НОВА КНОПКА "УВІЙТИ" ЛІВІШЕ ВІД БУРГЕРА -->
     <a href="https://dk-prime.netlify.app" class="header-login" target="_blank">
