--- a/events/season-2026.html
+++ b/events/season-2026.html
@@ -104,13 +104,16 @@
       <span class="logo__text">STOLAR CARP</span>
     </a>
     <nav class="nav" id="nav">
-      <a href="index.html" class="nav__link">Головна</a>
-      <a href="rules.html" class="nav__link">Регламент</a>
-      <a href="rating.html" class="nav__link">Рейтинг</a>
-      <a href="lakes.html" class="nav__link">Водойми</a>
-      <a href="sponsors.html" class="nav__link">Спонсори</a>
-      <a href="events/season-2026.html" class="nav__link nav__link--active">Архів</a>
-    </nav>
+  <a href="/index.html" class="nav__link">Головна</a>
+  <a href="/rules.html" class="nav__link">Регламент</a>
+  <a href="/register.html" class="nav__link">Реєстрація</a>
+  <a href="/live.html" class="nav__link">Live</a>
+  <a href="/rating.html" class="nav__link">Рейтинг</a>
+  <a href="/lakes.html" class="nav__link">Водойми</a>
+  <a href="/sponsors.html" class="nav__link">Спонсори</a>
+  <a href="/events/index.html" class="nav__link">Архів</a>
+  <a href="/cabinet.html" class="nav__link">Мій кабінет</a>
+</nav>
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
 </header>
