--- a/index.html
+++ b/index.html
@@ -407,9 +407,8 @@
   <a href="/cabinet.html" class="nav__link">Мій кабінет</a>
 </nav>
 
-    <!-- НОВА КНОПКА "УВІЙТИ" ЛІВІШЕ ВІД БУРГЕРА -->
-    <a href="https://dk-prime.netlify.app" class="header-login" target="_blank">
-      Увійти
+    <a href="/cabinet.html" class="header-login">
+  Увійти
     </a>
 
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
