--- a/register.html
+++ b/register.html
@@ -555,182 +555,7 @@
   </div>  
 </footer>  
 
-<!-- СКРИПТ РЕЄСТРАЦІЇ (без змін) -->
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-
-  // Твоя робоча вебка (актуальна)
-  const API = "https://script.google.com/macros/s/AKfycbyyBGjueNe074tk2QXmt2QTShhW00vzrFVOsw4UB4sgQ1eMHWKCsjCr6Z4NtwQdiSaG/exec";
-  const form = document.getElementById('regForm');
-  const qty = document.getElementById('food_qty');
-  const qtyField = document.getElementById('foodQtyField');
-  const phoneInput = document.getElementById('phone_rest');
-  const phoneHidden = document.getElementById('phone');
-  const copyCardBtn = document.getElementById('copyCard');
-  const msg = document.getElementById('msg');
-  const eventOptionsContainer = document.getElementById('eventOptions');
-  const submitBtn = document.getElementById('submitBtn');
-  const spinner = document.getElementById('spinner');
-  const fpInput = document.getElementById('fp');
-
-  if (!form) return;
-
-  // === Fingerprint ===
-  (function makeFingerprint(){
-    if (!fpInput) return;
-    try {
-      const src = [
-        navigator.userAgent,
-        navigator.language,
-        (screen && (screen.width + 'x' + screen.height)) || '',
-        (Intl && Intl.DateTimeFormat().resolvedOptions().timeZone) || ''
-      ].join('|');
-
-      let h = 2166136261;
-      for (let i = 0; i < src.length; i++) {
-        h ^= src.charCodeAt(i);
-        h = (h * 16777619) >>> 0;
-      }
-      fpInput.value = 'fp_' + h.toString(16);
-    } catch (err) {
-      console.warn('Fingerprint error:', err);
-    }
-  })();
-
-  // === Helpers ===
-  const toggleLoading = (isLoading) => {
-    submitBtn.disabled = isLoading;
-    submitBtn.textContent = isLoading ? 'Відправлення...' : 'Подати заявку';
-    spinner.classList.toggle('spinner--on', isLoading);
-  };
-
-  const prefillEvent = () => {
-    const params = new URLSearchParams(location.search);
-    const p = params.get('stage') || params.get('event');
-    if (!p) return;
-    const radios = eventOptionsContainer.querySelectorAll('input[name="event"]');
-    const found = Array.from(radios).find(r => (r.value || '').toLowerCase().includes(p.toLowerCase()));
-    if (found) found.checked = true;
-  };
-
-  // === Завантаження відкритих етапів ===
-  const loadEvents = async () => {
-    eventOptionsContainer.innerHTML = '<p class="form__hint">Завантаження актуальних етапів...</p>';
-    toggleLoading(true);
-
-    try {
-      const response = await fetch(API);
-      const data = await response.json();
-
-      if (!Array.isArray(data) || data.length === 0) {
-        eventOptionsContainer.innerHTML = '<p class="form-msg err">❌ Немає відкритих етапів.</p>';
-        return;
-      }
-
-      let html = '';
-      data.forEach(eventValue => {
-        const val = String(eventValue || '').trim();
-        if (!val) return;
-        const icon = val.toLowerCase().includes('фінал') ? '🥇' : '🏆';
-        html += `
-          <label class="event-item">
-            <input type="radio" name="event" value="${val}" required>
-            <span>${icon} ${val}</span>
-          </label>
-        `;
-      });
-
-      eventOptionsContainer.innerHTML = html;
-      prefillEvent();
-
-    } catch (error) {
-      console.error(error);
-      eventOptionsContainer.innerHTML = '<p class="form-msg err">❌ Помилка завантаження.</p>';
-    } finally {
-      toggleLoading(false);
-    }
-  };
-
-  loadEvents();
-
-  // === Харчування ===
-  const foodRadios = form.querySelectorAll('input[name="food"]');
-  const toggleFood = () => {
-    const need = form.food.value === 'Так';
-    qty.disabled = !need;
-    qty.required = need;
-    if (!need) qty.value = '';
-    qtyField.classList.toggle('field--disabled', !need);
-  };
-
-  foodRadios.forEach(r => r.addEventListener('change', toggleFood));
-  toggleFood();
-
-  // === Телефон ===
-  phoneInput.addEventListener('input', () => {
-    const clean = phoneInput.value.replace(/\D/g, '').slice(0, 9);
-    phoneInput.value = clean;
-    phoneHidden.value = clean ? '+380' + clean : '';
-  });
-
-  // === Копіювання картки ===
-  copyCardBtn.addEventListener('click', async () => {
-    try {
-      const num = document.getElementById('cardNum').textContent.replace(/\s+/g, '');
-      await navigator.clipboard.writeText(num);
-      const old = copyCardBtn.textContent;
-      copyCardBtn.textContent = '✅ Скопійовано';
-      setTimeout(() => copyCardBtn.textContent = old, 1500);
-    } catch {
-      alert('Скопіюйте вручну.');
-    }
-  });
-
-  // === Сабміт ===
-  form.addEventListener('submit', async (e) => {
-    e.preventDefault();
-
-    if (!form.checkValidity()) {
-      msg.className = 'form-msg err';
-      msg.textContent = 'Будь ласка, заповніть всі поля.';
-      form.reportValidity();
-      return;
-    }
-
-    if (!/^\+380\d{9}$/.test(phoneHidden.value)) {
-      msg.className = 'form-msg err';
-      msg.textContent = 'Невірний номер телефону.';
-      return;
-    }
-
-    toggleLoading(true);
-
-    try {
-      const formData = new FormData(form);
-      const response = await fetch(API, { method: 'POST', body: formData });
-      const result = await response.json();
-
-      if (result.success) {
-        msg.className = 'form-msg ok';
-        msg.innerHTML = `✅ Заявку на <b>${formData.get('event')}</b> прийнято!`;
-        form.reset();
-        phoneHidden.value = '';
-        toggleFood();
-      } else {
-        msg.className = 'form-msg err';
-        msg.textContent = '❌ Помилка з боку сервера.';
-      }
-
-    } catch (err) {
-      msg.className = 'form-msg err';
-      msg.textContent = '❌ Проблема з підключенням.';
-    } finally {
-      toggleLoading(false);
-    }
-  });
-
-});
-</script>
-
+<!-- Firebase логіка реєстрації на етап -->
+  <script type="module" src="assets/js/register_firebase.js"></script>
 </body>  
 </html>
