--- a/register.html
+++ b/register.html
@@ -552,7 +552,12 @@
       <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>  
     </div>  
   </div>  
-</footer>  
+</footer>
+
+  <!-- Загальна ініціалізація Firebase для STOLAR CARP -->
+<script type="module" src="assets/js/firebase-init.js"></script>
+<!-- Логіка реєстрації на етап -->
+<script type="module" src="assets/js/register_firebase.js"></script>
 
 <!-- Firebase логіка реєстрації на етап -->
 <script type="module" src="assets/js/register_firebase.js"></script>
