--- a/register.html
+++ b/register.html
@@ -16,7 +16,6 @@
 
   <!-- Локальні стилі тільки для сторінки реєстрації -->
   <style>
-    /* Фон як на рейтингу */
     body.register-page{
       background:var(--bg);
     }
@@ -26,7 +25,6 @@
       margin:0 auto;
     }
 
-    /* HERO / заголовок — в стилі шапки рейтингу */
     .register-hero{
       margin-top:14px;
       margin-bottom:22px;
@@ -97,7 +95,6 @@
       box-shadow:0 0 10px rgba(246,195,76,.5);
     }
 
-    /* Сітка: форма + оплата — як дві панелі рейтингу */
     .register-layout{
       display:grid;
       grid-template-columns:minmax(0,2fr) minmax(0,1.1fr);
@@ -123,7 +120,6 @@
       color:var(--muted);
     }
 
-    /* Інпути — темні, як у таблиці рейтингу */
     .register-page .input,
     .register-page input[type="text"],
     .register-page input[type="tel"],
@@ -163,7 +159,6 @@
       opacity:.55;
     }
 
-    /* Вибір етапу */
     .event-options{
       display:flex;
       flex-direction:column;
@@ -194,7 +189,6 @@
       flex-shrink:0;
     }
 
-    /* Радіокнопки «харчування» */
     .radio-row{
       display:flex;
       flex-wrap:wrap;
@@ -209,7 +203,6 @@
       font-size:.9rem;
     }
 
-    /* Телефон */
     .phone-wrap{
       display:flex;
       align-items:center;
@@ -225,7 +218,6 @@
       color:#e5e7eb;
     }
 
-    /* Дії форми */
     .form-actions{
       display:flex;
       align-items:center;
@@ -258,7 +250,6 @@
     .form-msg.ok{color:#43d18a;}
     .form-msg.err{color:#ff6c6c;}
 
-    /* Картка оплати — як бокова панель */
     .card--payment{
       background:#05060c;
       border:1px solid #262636;
@@ -308,7 +299,6 @@
       margin-top:6px;
     }
 
-    /* Приховати outline у хедері, щоб не було білих рамок */
     .header *:focus,
     .header *:focus-visible,
     .header a:focus,
@@ -322,7 +312,6 @@
 
 <body class="register-page">  
 
-<!-- HEADER -->
 <header class="header">  
   <div class="container header__row">  
     <a class="logo" href="index.html">  
@@ -344,11 +333,9 @@
   </div>  
 </header>  
 
-<!-- MAIN -->
 <main class="main">  
   <section class="container section section--narrow">  
 
-    <!-- HERO у стилі рейтингу -->
     <div class="register-hero">
       <div class="register-hero__kicker">
         <span class="register-hero__kicker-tag">SC</span>
@@ -359,13 +346,12 @@
         <span class="strong">STOLAR CARP 2026</span>
       </h1>
       <p>
-        Подайте заявку на участь у багатоетапному турнірі STOLAR CARP 2026. Після відправки
-        заявки здійсніть оплату внеску та вкажіть <b>назву команди</b> у коментарі до платежу.
+        Подайте заявку на участь у багатоетапному турнірі STOLAR CARP 2026. 
+        Дані команди беруться з вашого акаунта (Мій кабінет).
       </p>
       <div class="register-hero__divider"></div>
     </div>
 
-    <!-- LAYOUT: форма + оплата -->
     <div class="register-layout">
 
       <!-- ФОРМА -->
@@ -373,11 +359,10 @@
         <h2>Форма реєстрації</h2>  
         <p class="form__hint">
           Поля з позначкою <span style="color:var(--accent);">*</span> є обовʼязковими.
-          Дані команди підтягуються з вашого акаунта (Мій кабінет).
+          Поля команди й капітана змінюються тільки через ваш акаунт.
         </p>  
 
         <form id="regForm" class="form" novalidate>  
-          <!-- honeypot (антибот) -->
           <input  
             type="text"  
             name="hp"  
@@ -386,7 +371,6 @@
             style="position:absolute;left:-9999px;top:-9999px;height:0;width:0;opacity:0;"  
           />  
 
-          <!-- fingerprint -->
           <input type="hidden" id="fp" name="fp" />  
 
           <!-- Етап -->
@@ -399,151 +383,123 @@
             </div>  
           </div>  
 
-          <!-- Назва команди (тільки для читання, з Firebase) -->
+          <!-- Назва команди -->
           <div class="field">  
-            <label for="team_name">  
-              Назва команди <span style="color:var(--accent);">*</span>  
-            </label>  
-            <input  
-              type="text"  
-              id="team_name"  
-              name="team_name"  
-              class="input"  
-              placeholder="Завантажую назву команди..."  
-              readonly  
-              disabled  
-            />  
-          </div>  
+            <label for="team_name">Назва команди <span style="color:var(--accent);">*</span></label>  
+            <input
+              type="text"
+              id="team_name"
+              name="team_name"
+              class="input"
+              placeholder="Завантажую назву команди..."
+              readonly
+              disabled
+            />
+          </div>
 
-          <!-- Капітан (тільки для читання) -->
+          <!-- Капітан -->
           <div class="field">  
-            <label for="captain">  
-              Капітан команди <span style="color:var(--accent);">*</span>  
-            </label>  
-            <input  
-              type="text"  
-              id="captain"  
-              name="captain"  
-              class="input"  
-              placeholder="Завантажую дані капітана..."  
-              readonly  
-              disabled  
-            />  
-          </div>  
+            <label for="captain">Капітан команди <span style="color:var(--accent);">*</span></label>  
+            <input
+              type="text"
+              id="captain"
+              name="captain"
+              class="input"
+              placeholder="Завантажую дані капітана..."
+              readonly
+              disabled
+            />
+          </div>
 
-          <!-- Телефон (тільки для читання) -->
+          <!-- Телефон -->
           <div class="field">  
-            <label for="phone_rest">  
-              Номер телефону капітана <span style="color:var(--accent);">*</span>  
-            </label>  
+            <label for="phone_rest">Номер телефону капітана <span style="color:var(--accent);">*</span></label>  
             <div class="phone-wrap">  
               <span class="phone-prefix">+380</span>  
-              <input  
-                type="tel"  
-                id="phone_rest"  
-                inputmode="numeric"  
-                placeholder="XXXXXXXXX"  
-                readonly  
-                disabled  
-              />  
+              <input
+                type="tel"
+                id="phone_rest"
+                inputmode="numeric"
+                placeholder="XXXXXXXXX"
+                readonly
+                disabled
+              />
             </div>  
-            <!-- повний номер для відправки у Firestore -->
             <input type="hidden" id="phone" name="phone" />  
             <div class="hint" style="font-size:12px;color:var(--muted);">  
-              Номер автоматично підтягнеться з вашого профілю.  
+              Номер автоматично підтягується з вашого профілю.  
             </div>  
           </div>  
 
           <!-- Харчування -->
           <div class="field">  
-            <label>  
-              Харчування від організаторів? <span style="color:var(--accent);">*</span>  
-            </label>  
+            <label>Харчування від організаторів? <span style="color:var(--accent);">*</span></label>  
             <div class="radio-row">  
-              <label>  
-                <input type="radio" name="food" value="Так" required />  
-                <span>Так</span>  
-              </label>  
-              <label>  
-                <input type="radio" name="food" value="Ні" />  
-                <span>Ні</span>  
-              </label>  
+              <label><input type="radio" name="food" value="Так" required /> <span>Так</span></label>  
+              <label><input type="radio" name="food" value="Ні" /> <span>Ні</span></label>  
             </div>  
           </div>  
 
           <!-- Кількість харчуючих -->
           <div class="field field--disabled" id="foodQtyField">  
             <label for="food_qty">Кількість харчуючих (1–6)</label>  
-            <input  
-              type="number"  
-              id="food_qty"  
-              name="food_qty"  
-              class="input"  
-              min="1"  
-              max="6"  
-              inputmode="numeric"  
-              placeholder="Вкажіть кількість, якщо замовляєте харчування"  
-            />  
-            <div class="hint" style="font-size:12px;color:var(--muted);">  
-              Якщо харчування не потрібне — залиште поле порожнім.  
-            </div>  
-          </div>  
+            <input
+              type="number"
+              id="food_qty"
+              name="food_qty"
+              class="input"
+              min="1"
+              max="6"
+              inputmode="numeric"
+              placeholder="Вкажіть кількість, якщо замовляєте харчування"
+            />
+            <div class="hint" style="font-size:12px;color:var(--muted);">
+              Якщо харчування не потрібне — залиште поле порожнім.
+            </div>
+          </div>
 
           <!-- Підтвердження регламенту -->
           <div class="field">  
             <label style="display:flex;align-items:center;gap:8px;cursor:pointer;">  
               <input type="checkbox" id="rules" required style="transform:scale(1.3);accent-color:#f6c34c;">  
-              <span>Підтверджую, що ознайомлений із  
-                <a href="rules.html" target="_blank" style="color:#f6c34c;text-decoration:underline;">  
-                  регламентом турніру  
-                </a>  
+              <span>Підтверджую, що ознайомлений із
+                <a href="rules.html" target="_blank" style="color:#f6c34c;text-decoration:underline;">
+                  регламентом турніру
+                </a>
               </span>  
             </label>  
           </div>  
 
-          <!-- Дія -->
           <div class="form-actions">  
-            <button type="submit" id="submitBtn" class="btn btn--primary">  
-              Подати заявку  
-            </button>  
+            <button type="submit" id="submitBtn" class="btn btn--primary">Подати заявку</button>  
             <div id="spinner" class="spinner" aria-hidden="true"></div>  
           </div>
 
-          <!-- Повідомлення форми -->
           <div id="msg" class="form-msg"></div>
-
-          <p class="form__hint" style="margin-top:6px;">  
-            ⚠️ Після відправки заявки у вас є <b>24 години</b>, щоб здійснити оплату.  
-            Якщо оплата не буде зарахована — заявка може бути анульована організатором.  
-          </p>  
         </form>  
       </div>  
 
-      <!-- КАРТКА З ОПЛАТОЮ -->
+      <!-- ОПЛАТА (інфо-картка) -->
       <div class="card register-card card--payment">  
         <div class="card-payment-title">  
           <span>₴</span> Оплата внеску  
         </div>  
         <p>Сума внеску: <b>3500 ₴</b> на банківську картку:</p>  
         <p>Номер картки:</p>
-        <p>
-          <span id="cardNum" class="card-number">4874 0700 5068 8793</span>
-        </p>
+        <p><span id="cardNum" class="card-number">4874 0700 5068 8793</span></p>
         <button type="button" id="copyCard" class="btn btn--ghost" style="margin-top:6px;">  
           Скопіювати номер картки  
         </button>  
         <p class="card-note">
-          У коментарі до платежу обовʼязково вкажіть <b>назву команди</b>.  
-          Це допоможе швидко ідентифікувати оплату та підтвердити вашу участь.
+          У коментарі до платежу обовʼязково вкажіть <b>назву команди</b>.
         </p>  
       </div>
 
-    </div><!-- /register-layout -->
+    </div>
 
   </section>  
 </main>  
 
-<!-- FOOTER -->
 <footer class="footer">  
   <div class="container footer__row">  
     <div>© 2025 STOLAR CARP · Львів</div>  
@@ -554,12 +510,8 @@
   </div>  
 </footer>
 
-  <!-- Загальна ініціалізація Firebase для STOLAR CARP -->
-<script type="module" src="assets/js/firebase-init.js"></script>
-<!-- Логіка реєстрації на етап -->
+<!-- Логіка реєстрації на етап (всередині сама імпортує firebase-init.js) -->
 <script type="module" src="assets/js/register_firebase.js"></script>
 
-<!-- Firebase логіка реєстрації на етап -->
-<script type="module" src="assets/js/register_firebase.js"></script>
 </body>  
 </html>
