--- a/register.html
+++ b/register.html
@@ -203,21 +203,6 @@
       font-size:.9rem;
     }
 
-    .phone-wrap{
-      display:flex;
-      align-items:center;
-      gap:6px;
-    }
-
-    .phone-prefix{
-      padding:10px 12px;
-      border-radius:10px;
-      background:#05060c;
-      border:1px solid #262636;
-      font-size:.86rem;
-      color:#e5e7eb;
-    }
-
     .form-actions{
       display:flex;
       align-items:center;
@@ -346,8 +331,9 @@
         <span class="strong">STOLAR CARP 2026</span>
       </h1>
       <p>
-        Подайте заявку на участь у багатоетапному турнірі STOLAR CARP 2026. 
-        Дані команди беруться з вашого акаунта (Мій кабінет).
+        Подайте заявку на участь у багатоетапному турнірі STOLAR CARP 2026.  
+        Дані команди та капітана вже збережені у вашому акаунті (Мій кабінет) 
+        та не вводяться на цій сторінці.
       </p>
       <div class="register-hero__divider"></div>
     </div>
@@ -358,11 +344,12 @@
       <div class="card register-form-card">  
         <h2>Форма реєстрації</h2>  
         <p class="form__hint">
-          Поля з позначкою <span style="color:var(--accent);">*</span> є обовʼязковими.
-          Поля команди й капітана змінюються тільки через ваш акаунт.
+          Ви обираєте лише етап, опції харчування та підтверджуєте регламент.  
+          Назва команди, капітан і телефон привʼязані до акаунта.
         </p>  
 
         <form id="regForm" class="form" novalidate>  
+          <!-- honeypot -->
           <input  
             type="text"  
             name="hp"  
@@ -371,63 +358,21 @@
             style="position:absolute;left:-9999px;top:-9999px;height:0;width:0;opacity:0;"  
           />  
 
+          <!-- fingerprint (на майбутнє, якщо треба) -->
           <input type="hidden" id="fp" name="fp" />  
+
+          <!-- приховані поля для команди / капітана / телефону,
+               щоб їх заповнив register_firebase.js з профілю -->
+          <input type="hidden" id="team_name" name="team_name" />
+          <input type="hidden" id="captain"   name="captain"   />
+          <input type="hidden" id="phone_rest" name="phone_rest" />
+          <input type="hidden" id="phone"     name="phone"     />
 
           <!-- Етап -->
           <div class="field">  
-            <label>  
-              Оберіть етап турніру <span style="color:var(--accent);">*</span>  
-            </label>  
+            <label>Оберіть етап турніру <span style="color:var(--accent);">*</span></label>  
             <div id="eventOptions" class="event-options">  
               <p id="loading-events" class="form__hint">Завантаження актуальних етапів...</p>  
-            </div>  
-          </div>  
-
-          <!-- Назва команди -->
-          <div class="field">  
-            <label for="team_name">Назва команди <span style="color:var(--accent);">*</span></label>  
-            <input
-              type="text"
-              id="team_name"
-              name="team_name"
-              class="input"
-              placeholder="Завантажую назву команди..."
-              readonly
-              disabled
-            />
-          </div>
-
-          <!-- Капітан -->
-          <div class="field">  
-            <label for="captain">Капітан команди <span style="color:var(--accent);">*</span></label>  
-            <input
-              type="text"
-              id="captain"
-              name="captain"
-              class="input"
-              placeholder="Завантажую дані капітана..."
-              readonly
-              disabled
-            />
-          </div>
-
-          <!-- Телефон -->
-          <div class="field">  
-            <label for="phone_rest">Номер телефону капітана <span style="color:var(--accent);">*</span></label>  
-            <div class="phone-wrap">  
-              <span class="phone-prefix">+380</span>  
-              <input
-                type="tel"
-                id="phone_rest"
-                inputmode="numeric"
-                placeholder="XXXXXXXXX"
-                readonly
-                disabled
-              />
-            </div>  
-            <input type="hidden" id="phone" name="phone" />  
-            <div class="hint" style="font-size:12px;color:var(--muted);">  
-              Номер автоматично підтягується з вашого профілю.  
             </div>  
           </div>  
 
@@ -479,7 +424,7 @@
         </form>  
       </div>  
 
-      <!-- ОПЛАТА (інфо-картка) -->
+      <!-- ОПЛАТА -->
       <div class="card register-card card--payment">  
         <div class="card-payment-title">  
           <span>₴</span> Оплата внеску  
@@ -510,7 +455,7 @@
   </div>  
 </footer>
 
-<!-- Логіка реєстрації на етап (всередині сама імпортує firebase-init.js) -->
+<!-- Логіка реєстрації на етап (сама імпортує firebase-init.js) -->
 <script type="module" src="assets/js/register_firebase.js"></script>
 
 </body>  
